--- a/css/style.css
+++ b/css/style.css
@@ -75,7 +75,7 @@ header{
     position: relative;
     height: calc(4rem + 1rem);
     max-width: 1250px;
-    display: felx;
+    display: flex;
     justify-content: space-between;
     align-items: center;
     margin-left: auto;
@@ -93,9 +93,13 @@ header{
 .nav-items a{
     color: var(--first-color);
     font-size: var(--normal-font-size);
-    font: 500;
+    font-weight: 500;
 }
 
 .nav-items a:not(:last-child){
     margin-right: 50px;
+}
+
+.nav-items a:hover{
+    color: var(--second-color);
 }
